--- a/homework1/h1.tex
+++ b/homework1/h1.tex
@@ -36,6 +36,39 @@
 
 The most important one is ``Should Wang follow the advice of Lu to ignore this issue now?''. I think it is the final question in this case, Wang should consider many other things, like family, supervisor, the company and etc., except from engineering ethics before making the decision.
 
+\section{List facts that would help to resolve the most important issue/answer the question as well as identifying any relevant missing facts}
+
+Facts:
+
+\begin{itemize}
+\item Wang's parents are not able to work and his work is the only financial source of the family.
+\item The products Wang is working on is for people in situation similar to him, he wants to ensure their safety.
+\item The company is in financial difficulties and a rival company will release similar products after a month scheduled by Kitten so that Kitten needs to sell products as soon as possible. 
+\item The heating issue is rare and is found when the product works for a long time.
+\item Wang's supervisor Lu wants him to skip the issue and recall the products if problems found later.
+\end{itemize}
+
+Missing Facts:
+
+\begin{itemize}
+\item Whether the promise of Lu's recall correction can be realized.
+\item Whether Wang will lose his job if he doesn't take Lu's advice.
+\item Whether the company will bankrupt if the products can't be sold soon, and Wang, Lu and many others will all lose job because of that.
+\end{itemize}
+
+\section{Make reasonable assumptions regarding missing facts}
+
+Since Lu seems lacking of engineering ethics, if the products sells very well and profits a lot, he may refused to recall them later. \\
+
+If Wang refused Lu's suggestions, Lu may substitute him with someone else to deal with the problem and release the product on time \\
+
+If finally they don't release the product on time, the financial problem of Kitten will become worse. So it is very likely that all of them will lose job.
+
+\section{Clarify the use of any potentially ambiguous terminology you've used so far}
+
+Rare: about one out of one thousand. \\
+
+A long time: 2000 hours.
 
 
 
